unpackaged/main/default/objects/DSCORGPKG__DiscoverOrg_Technologies__c/DSCORGPKG__DiscoverOrg_Technologies__c.object-meta.xml
<CustomObject>
    <label>DiscoverOrg Technologies</label>
    <nameField>
        <label>DiscoverOrg Technologies Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DiscoverOrg Technologies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>