unpackaged/main/default/objects/DSCORGPKG__DiscoverOrg_Technologies__c/fields/DSCORGPKG__Account__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>DiscoverOrg Technologies</relationshipLabel>
    <relationshipName>DiscoverOrg_Technologies</relationshipName>
    <type>Lookup</type>
</CustomField>