unpackaged/main/default/objects/DSCORGPKG__DiscoverOrg_Technologies__c/fields/DSCORGPKG__Contact__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>DiscoverOrg Technologies</relationshipLabel>
    <relationshipName>DiscoverOrg_Technologies</relationshipName>
    <type>Lookup</type>
</CustomField>