unpackaged/main/default/objects/DSCORGPKG__DiscoverOrg_Technologies__c/fields/DSCORGPKG__Lead__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>DiscoverOrg Technologies</relationshipLabel>
    <relationshipName>DiscoverOrg_Technologies</relationshipName>
    <type>Lookup</type>
</CustomField>