unpackaged/main/default/objects/DSCORGPKG__DiscoverOrg_Technologies__c/fields/DSCORGPKG__Technology_Status__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Technology_Status__c</fullName>
    <label>Technology Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>