unpackaged/main/default/objects/DSCORGPKG__DiscoverOrg_Technologies__c/fields/DSCORGPKG__Technology_Vendor__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Technology_Vendor__c</fullName>
    <label>Technology Vendor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>