unpackaged/main/default/objects/DSCORGPKG__DiscoverOrg_Technologies__c/listViews/DSCORGPKG__All.listView-meta.xml
<ListView>
    <fullName>DSCORGPKG__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>